# kwin-minimize2tray

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  install-immutable.sh  install.sh
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: config.ui  main.qml
plugin/: CMakeLists.txt  qmldir  trayicon.cpp  trayicon.h  trayiconplugin.cpp
